added visualization node and two launch files

--- a/pure_pursuit_params.yaml
+++ b/pure_pursuit_params.yaml
@@ -15,3 +15,4 @@ drive_topic: "/vesc/high_level/ackermann_cmd_mux/input/nav_1"
 sim_drive_topic: "drive"
 wpt_topic: "pure_pursuit_waypoint"
 wpt_viz_topic: "waypoint_viz"
+wpt_marker_topic: "waypoint_marker"
